@@ -153,14 +153,22 @@ class PokerAvatarTestCase(unittest.TestCase):
         testclock._seconds_reset()        
         self.destroyDb()
         self.setUpServer()
-        self.client_factory = [None, None]
+        self.client_factory = [None, None, None]
+        # Third client currently only used by test63, but put it here
+        # because it was easier and didn't slow things down too much.
+        def connectClient2(client): 
+            reactor.connectTCP('127.0.0.1', self.port, self.client_factory[2])
+            return client
+
         def connectClient1(client): 
             reactor.connectTCP('127.0.0.1', self.port, self.client_factory[1])
             return client
 
         d = self.setUpClient(0)
         d.addCallback(connectClient1)
-        self.setUpClient(1)
+        d = self.setUpClient(1)
+        d.addCallback(connectClient2)
+        self.setUpClient(2)
         reactor.connectTCP('127.0.0.1', self.port, self.client_factory[0])
     # -------------------------------------------------------------------------
     def cleanSessions(self, arg):
@@ -421,7 +429,7 @@ class PokerAvatarTestCase(unittest.TestCase):
                     self.assertEquals(vv.game.max_players, 10)
                     self.assertEquals(vv.game.variant, 'holdem')
                     self.assertEquals(vv.game.betting_structure, struct)
-                    self.assertEquals(found, True)
+        self.assertEquals(found, True)
         return (client, packet)
     # ------------------------------------------------------------------------
     def test08_joinTable(self):
@@ -2540,13 +2548,84 @@ class PokerAvatarTestCase(unittest.TestCase):
         d.addCallback(self.buyInTable, 0, 101, 1000)
         d.addCallback(self.autoBlindAnteForceTourney, 0, 101)
         return d
+    # -------------------------------------------------------------------------
+    def joinTableWhenHandRunning(self, (client, packet), id, gameId, name, struct):
+        avatar = self.service.avatars[id]
+        table = self.service.getTable(gameId)
+        avatar.queuePackets()
+        avatar.handlePacketLogic(PacketPokerTableJoin(serial = client.getSerial(),
+                                                      game_id = gameId))
+        found = 0
+        for packet in avatar.resetPacketsQueue():
+            if packet.type == PACKET_POKER_TABLE:
+                found += 1
+                for  (kk, vv) in avatar.tables.items():
+                    self.assertEquals(vv.game.id, table.game.id)
+                    self.assertEquals(vv.game.name, name)
+                    self.assertEquals(vv.game.max_players, 10)
+                    self.assertEquals(vv.game.variant, 'holdem')
+                    self.assertEquals(vv.game.betting_structure, struct)
+            elif packet.type == PACKET_POKER_BATCH_MODE:
+                found += 1
+                self.assertEquals(packet.serial, 0)
+                self.assertEquals(packet.game_id, table.game.id)
+            elif packet.type ==  PACKET_POKER_SEATS:
+                found += 1
+                self.assertEquals(packet.game_id, table.game.id)
+            elif packet.type == PACKET_POKER_IN_GAME:
+                found += 1
+                self.assertEquals(packet.serial, 0)
+                self.assertEquals(packet.players, [4, 5])
+            elif packet.type ==  PACKET_POKER_BLIND:
+                found += 1
+                self.assertEquals(packet.serial, 5)
+                self.assertEquals(packet.game_id, table.game.id)
+                self.assertEquals(packet.amount,  100)
+            elif packet.type ==  PACKET_POKER_BLIND_REQUEST:
+                found += 1
+                self.assertEquals(packet.serial, 4)
+                self.assertEquals(packet.game_id, table.game.id)
+                self.assertEquals(packet.amount,  200)
+                self.assertEquals(packet.state,  'big')
+        self.assertEquals(found, 6)
+        return (client, packet)
+    # ------------------------------------------------------------------------
+    def test63_newObserver(self):
+        """Test a third player joining the table and receiving packet playback"""
+        # To cover a few lines in pokeravatar.join(), I needed a situation
+        # where a third client joined while two were already playing a
+        # hand.  This test does that.  Note it's the only test that uses
+        # the third client.
+        d = self.client_factory[0].established_deferred
+        d.addCallback(self.setupCallbackChain)
+        d.addCallback(self.login, 0)
+        d.addCallback(self.joinTable, 0, 101, 'Table2', '2-4-limit')
+        d.addCallback(self.seatTable, 0, 101)
+        d.addCallback(self.buyInTable, 0, 101, 1000)
+        d.addCallback(self.sitTable, 0, 101)
+        d.addCallback(self.readyToPlay, 0, 101)
+        d2 = self.client_factory[1].established_deferred
+        d2.addCallback(self.setupCallbackChain)
+        d2.addCallback(self.login, 1)
+        d2.addCallback(self.joinTable, 1, 101, 'Table2', '2-4-limit')
+        d2.addCallback(self.seatTable, 1, 101)
+        d2.addCallback(self.buyInTable, 1, 101, 1000)
+        d2.addCallback(self.autoBlindAnte, 1, 101)
+        d2.addCallback(self.sitTable, 1, 101)
+        d2.addCallback(self.readyToPlay, 1, 101)
+        d2.addCallback(self.dealTable, 101)
+        d3 = self.client_factory[2].established_deferred
+        d3.addCallback(self.setupCallbackChain)
+        d3.addCallback(self.login, 2)
+        d3.addCallback(self.joinTableWhenHandRunning, 2, 101, 'Table2', '2-4-limit')
+        return defer.DeferredList((d, d2))
     # ------------------------------------------------------------------------
     def tinyFunctions(self, (client, packet), id):
         avatar = self.service.avatars[id]
         self.assertEquals(avatar.getUrl(), "random")
         self.assertEquals(avatar.getOutfit(), "random")
     # ------------------------------------------------------------------------
-    def test99_testTinyFunctions(self):
+    def test64_testTinyFunctions(self):
         """Test a few small functions that are not otherwise called"""
         d = self.client_factory[0].established_deferred
         d.addCallback(self.sendExplain)
@@ -2556,7 +2635,7 @@ class PokerAvatarTestCase(unittest.TestCase):
     # ------------------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
-#    loader.methodPrefix = "test62"
+#    loader.methodPrefix = "test63"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerAvatarTestCase))
     return runner.TrialRunner(
